[gd_scene load_steps=2 format=3 uid="uid://1am082o4s1au"]

[ext_resource type="Script" path="res://Scripts/enemy_spawner.gd" id="1_08fn3"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_08fn3")

[node name="SpawnLocation" type="Node2D" parent="."]

[node name="SpawnPos_01" type="Marker2D" parent="SpawnLocation"]
position = Vector2(1350, 50)

[node name="SpawnPos_02" type="Marker2D" parent="SpawnLocation"]
position = Vector2(1351, 150)

[node name="SpawnPos_03" type="Marker2D" parent="SpawnLocation"]
position = Vector2(1350, 250)

[node name="SpawnPos_04" type="Marker2D" parent="SpawnLocation"]
position = Vector2(1350, 350)

[node name="SpawnPos_05" type="Marker2D" parent="SpawnLocation"]
position = Vector2(1350, 450)

[node name="SpawnPos_06" type="Marker2D" parent="SpawnLocation"]
position = Vector2(1350, 550)

[node name="SpawnPos_07" type="Marker2D" parent="SpawnLocation"]
position = Vector2(1350, 650)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="EnemyPathTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="RageTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="EnemyPathTimer" to="." method="_on_enemy_path_timer_timeout"]
[connection signal="timeout" from="RageTimer" to="." method="_on_rage_timer_timeout"]
